# TASK

./: CMakeLists.txt  IQA.cpp  IUA.cpp  README.md  buildR2T.cpp  multiKey.cpp  updateR2T.cpp
UnMaintenance/: core-decomp.cpp  delete-maintenance.cpp  graph.cpp  graph.h  insert-maintenance.cpp  main.cpp  probability-change-core.h  probability-change-maintenance.cpp  uncertain-core.cpp  uncertain-core.h
datasets/test/: test  test.PB  test.keyVertex  test.out  test.string  test.vertexKey
util/: PB.cpp  PB.h  canLabel.cpp  canLabel.h  canLabelET.cpp  canLabelET.h  head.h  ioPB.cpp  ioPB.h  ioUint.cpp  ioUint.h  mtrie.cc  mtrie.h  trie.cc  trie.h  util.cc  util.h
